# Job-Market-Dashboard

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  compose.yaml  pyproject.toml
.github/workflows/: deploy.yml
app/: main.py
data/raw/: sample_jobs.csv
src/job_market/: __init__.py  analyzer.py  data_loader.py  scoring.py
tests/: test_data_loader.py  test_scoring.py
