[project]
name = "job-market-dashboard"
version = "0.1.0"
description = "Personal job market dashboard for tracking and analyzing internship and entry-level job postings"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas>=3.0.3",
    "streamlit>=1.59.2",
]

[dependency-groups]
dev = [
    "mypy>=2.3.0",
    "pandas-stubs>=3.0.3.260530",
    "pytest>=9.1.1",
    "ruff>=0.15.22",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
